# bank-statement-analysis

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
services/: gen_ai_llm.py
